Utvider los-tjeneste med ny behandlingårsak KLAGE_TILBAKEBETALING (TFP-4896)